--- a/index.html
+++ b/index.html
@@ -257,25 +257,25 @@
 					<h2 class="title">What are we doing</h2>
 					<ul class="list">
 						<li class="list-doing">
-							<img
-								src="./images/img1.jpg"
-								alt="Computer"
-								width="360"
-							/>
+							<img srcset="
+								./images/img1.jpg 1x,
+								./images/img1@2x.jpg 2x"
+								src="./images/img1.jpg" alt="Computer"
+								width="360"/>
 						</li>
 						<li class="list-doing">
-							<img
-								src="./images/img2.jpg"
-								alt="Smartphone"
-								width="360"
-							/>
+							<img srcset="
+								./images/img2.jpg 1x,
+								./images/img2@2x.jpg 2x"
+								src="./images/img2.jpg" alt="Smartphone"
+								width="360"/>
 						</li>
 						<li class="list-doing">
-							<img
-								src="./images/img3.jpg"
-								alt="Smartphone in hand"
-								width="360"
-							/>
+							<img srcset="
+								./images/img3.jpg 1x,
+								./images/img3@2x.jpg 2x" 
+								src="./images/img3.jpg" alt="Smartphone in hand" 
+								width="360"/>
 						</li>
 					</ul>
 				</div>
