--- a/portfolio.html
+++ b/portfolio.html
@@ -172,10 +172,34 @@
                 <li class="button-portfolio-li"><button type="button" class="button button-portfolio">Design</button></li>
                 <li class="button-portfolio-li"><button type="button" class="button button-portfolio">Marketing</button></li>
             </ul></div>
-            <!-- <ul class="list portfolio-list-card">
+            <ul class="list portfolio-list-card">
                 <li class="portfolio-card">
                     <a href="" class="link portfolio-card-a">
-                        <div class="position-card"><img src="./images/content1.jpg" alt="Forms" width="360">
+                        <div class="position-card">
+                            <picture>
+                                <source
+                                media="(min-width: 1158px)"
+                                srcset="
+                                ./images/content1_desktop.jpg 1x,
+                                ./images/content1_desktop@2x.jpg 2x"
+                                >
+                                <source
+                                media="(min-width: 768px)"
+                                srcset="
+                                ./images/content1_tablet.jpg 1x,
+                                ./images/content1_tablet@2x.jpg 2x"
+                                > 
+                                <source 
+                                media="(min-width: 320px)"
+                                srcset="
+                                ./images/content1_smartphone.jpg 1x,
+                                ./images/content1_smartphone@2x.jpg 2x"
+                                >
+                                <img 
+                                src="./images/content1.jpg" 
+                                alt="Forms" 
+                                >
+                            </picture>
                         <p class="overlay">14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud Storage App</p>
                         </div>
                         <div class="card-portfolio-info"><h2 class="card-h">Banking App Interface Concept</h2>
@@ -184,7 +208,31 @@
                 </li>
                 <li class="portfolio-card">
                     <a href="" class="link portfolio-card-a">
-                        <div class="position-card"><img src="./images/content2.jpg" alt="Smartfone" width="360">
+                        <div class="position-card">
+                            <picture>
+                                <source
+                                media="(min-width: 1158px)"
+                                srcset="
+                                ./images/content2_desktop.jpg 1x,
+                                ./images/content2_desktop@2x.jpg 2x"
+                                >
+                                <source
+                                media="(min-width: 768px)"
+                                srcset="
+                                ./images/content2_tablet.jpg 1x,
+                                ./images/content2_tablet@2x.jpg 2x"
+                                > 
+                                <source 
+                                media="(min-width: 320px)"
+                                srcset="
+                                ./images/content2_smartphone.jpg 1x,
+                                ./images/content2_smartphone@2x.jpg 2x"
+                                >
+                                <img 
+                                src="./images/content2.jpg" 
+                                alt="Smartfone" 
+                                >
+                            </picture>
                         <p class="overlay">14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud Storage App</p>
                         </div>
                     <div class="card-portfolio-info"><h2 class="card-h">Cashless Payment</h2>
@@ -193,7 +241,31 @@
                 </li>
                 <li class="portfolio-card">
                     <a href="" class="link portfolio-card-a">
-                        <div class="position-card"><img src="./images/content3.jpg" alt="Computer" width="360">
+                        <div class="position-card">
+                            <picture>
+                                <source
+                                media="(min-width: 1158px)"
+                                srcset="
+                                ./images/content3_desktop.jpg 1x,
+                                ./images/content3_desktop@2x.jpg 2x"
+                                >
+                                <source
+                                media="(min-width: 768px)"
+                                srcset="
+                                ./images/content3_tablet.jpg 1x,
+                                ./images/content3_tablet@2x.jpg 2x"
+                                > 
+                                <source 
+                                media="(min-width: 320px)"
+                                srcset="
+                                ./images/content3_smartphone.jpg 1x,
+                                ./images/content3_smartphone@2x.jpg 2x"
+                                >
+                                <img 
+                                src="./images/content3.jpg" 
+                                alt="Computer" 
+                                >
+                            </picture>
                         <p class="overlay">14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud Storage App</p>
                         </div>
                         <div class="card-portfolio-info"><h2 class="card-h">Meditation App</h2>
@@ -202,7 +274,31 @@
                 </li>
                 <li class="portfolio-card">
                     <a href="" class="link portfolio-card-a">
-                        <div class="position-card"><img src="./images/content4.jpg" alt="Shortest Wheel" width="360">
+                        <div class="position-card">
+                            <picture>
+                                <source
+                                media="(min-width: 1158px)"
+                                srcset="
+                                ./images/content4_desktop.jpg 1x,
+                                ./images/content4_desktop@2x.jpg 2x"
+                                >
+                                <source
+                                media="(min-width: 768px)"
+                                srcset="
+                                ./images/content4_tablet.jpg 1x,
+                                ./images/content4_tablet@2x.jpg 2x"
+                                > 
+                                <source 
+                                media="(min-width: 320px)"
+                                srcset="
+                                ./images/content4_smartphone.jpg 1x,
+                                ./images/content4_smartphone@2x.jpg 2x"
+                                >
+                                <img 
+                                src="./images/content4.jpg" 
+                                alt="Shortest Wheel" 
+                                >
+                            </picture>
                         <p class="overlay">14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud Storage App</p>
                         </div>
                         <div class="card-portfolio-info"><h2 class="card-h">Taxi Service</h2>
@@ -211,7 +307,31 @@
                 </li>
                 <li class="portfolio-card">
                     <a href="" class="link portfolio-card-a">
-                        <div class="position-card"><img src="./images/content5.jpg" alt="Screen Illustrations" width="360">
+                        <div class="position-card">
+                            <picture>
+                                <source
+                                media="(min-width: 1158px)"
+                                srcset="
+                                ./images/content5_desktop.jpg 1x,
+                                ./images/content5_desktop@2x.jpg 2x"
+                                >
+                                <source
+                                media="(min-width: 768px)"
+                                srcset="
+                                ./images/content5_tablet.jpg 1x,
+                                ./images/content5_tablet@2x.jpg 2x"
+                                > 
+                                <source 
+                                media="(min-width: 320px)"
+                                srcset="
+                                ./images/content5_smartphone.jpg 1x,
+                                ./images/content5_smartphone@2x.jpg 2x"
+                                >
+                                <img 
+                                src="./images/content5.jpg" 
+                                alt="Screen Illustrations" 
+                                >
+                            </picture>
                         <p class="overlay">14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud Storage App</p>
                         </div>
                         <div class="card-portfolio-info"><h2 class="card-h">Screen Illustrations</h2>
@@ -220,7 +340,31 @@
                 </li>
                 <li class="portfolio-card">
                     <a href="" class="link portfolio-card-a">
-                        <div class="position-card"><img src="./images/content6.jpg" alt="Girl" width="360">
+                        <div class="position-card">
+                            <picture>
+                                <source
+                                media="(min-width: 1158px)"
+                                srcset="
+                                ./images/content6_desktop.jpg 1x,
+                                ./images/content6_desktop@2x.jpg 2x"
+                                >
+                                <source
+                                media="(min-width: 768px)"
+                                srcset="
+                                ./images/content6_tablet.jpg 1x,
+                                ./images/content6_tablet@2x.jpg 2x"
+                                > 
+                                <source 
+                                media="(min-width: 320px)"
+                                srcset="
+                                ./images/content6_smartphone.jpg 1x,
+                                ./images/content6_smartphone@2x.jpg 2x"
+                                >
+                                <img 
+                                src="./images/content6.jpg" 
+                                alt="Girl" 
+                                >
+                            </picture>
                         <p class="overlay">14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud Storage App</p></div>
                         <div class="card-portfolio-info"><h2 class="card-h">Online Courses</h2>
                         <p class="card-p">Marketing</p></div>
@@ -228,7 +372,31 @@
                 </li>
                 <li class="portfolio-card">
                     <a href="" class="link portfolio-card-a">
-                        <div class="position-card"><img src="./images/content7.jpg" alt="Makets" width="360">
+                        <div class="position-card">
+                            <picture>
+                                <source
+                                media="(min-width: 1158px)"
+                                srcset="
+                                ./images/content7_desktop.jpg 1x,
+                                ./images/content7_desktop@2x.jpg 2x"
+                                >
+                                <source
+                                media="(min-width: 768px)"
+                                srcset="
+                                ./images/content7_tablet.jpg 1x,
+                                ./images/content7_tablet@2x.jpg 2x"
+                                > 
+                                <source 
+                                media="(min-width: 320px)"
+                                srcset="
+                                ./images/content7_smartphone.jpg 1x,
+                                ./images/content7_smartphone@2x.jpg 2x"
+                                >
+                                <img 
+                                src="./images/content7.jpg" 
+                                alt="Makets" 
+                                >
+                            </picture>
                         <p class="overlay">14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud Storage App</p></div>
                         <div class="card-portfolio-info"><h2 class="card-h">Instagram Stories Concept</h2>
                         <p class="card-p">Design</p></div>
@@ -236,7 +404,31 @@
                 </li>
                 <li class="portfolio-card">
                     <a href="" class="link portfolio-card-a">
-                        <div class="position-card"><img src="./images/content8.jpg" alt="Food" width="360">
+                        <div class="position-card">
+                            <picture>
+                                <source
+                                media="(min-width: 1158px)"
+                                srcset="
+                                ./images/content8_desktop.jpg 1x,
+                                ./images/content8_desktop@2x.jpg 2x"
+                                >
+                                <source
+                                media="(min-width: 768px)"
+                                srcset="
+                                ./images/content8_tablet.jpg 1x,
+                                ./images/content8_tablet@2x.jpg 2x"
+                                > 
+                                <source 
+                                media="(min-width: 320px)"
+                                srcset="
+                                ./images/content8_smartphone.jpg 1x,
+                                ./images/content8_smartphone@2x.jpg 2x"
+                                >
+                                <img 
+                                src="./images/content8.jpg" 
+                                alt="Food" 
+                                >
+                            </picture>
                         <p class="overlay">14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud Storage App</p></div>
                         <div class="card-portfolio-info"><h2 class="card-h">Organic Food</h2>
                         <p class="card-p">Web Site</p></div>
@@ -244,13 +436,35 @@
                 </li>
                 <li class="portfolio-card">
                     <a href="" class="link portfolio-card-a">
-                        <div class="position-card"><img src="./images/content9.jpg" alt="Coffee" width="360">
+                        <div class="position-card"><picture>
+                                <source
+                                media="(min-width: 1158px)"
+                                srcset="
+                                ./images/content9_desktop.jpg 1x,
+                                ./images/content9_desktop@2x.jpg 2x"
+                                >
+                                <source
+                                media="(min-width: 768px)"
+                                srcset="
+                                ./images/content9_tablet.jpg 1x,
+                                ./images/content9_tablet@2x.jpg 2x"
+                                > 
+                                <source 
+                                media="(min-width: 320px)"
+                                srcset="
+                                ./images/content9_smartphone.jpg 1x,
+                                ./images/content9_smartphone@2x.jpg 2x"
+                                >
+                                <img 
+                                src="./images/content9.jpg" 
+                                alt="Coffee" 
+                                >
                         <p class="overlay">14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud Storage App</p></div>
                         <div class="card-portfolio-info"><h2 class="card-h">Fresh Coffee</h2>
                         <p class="card-p">Web Site</p></div>
                     </a>
                 </li>
-            </ul> -->
+            </ul>
             </div>
         </section>
     </main>
@@ -333,5 +547,6 @@
 				</div>
 			</div>
 		</footer>
+    <script src="./js/mobile-menu.js"></script>
 </body>
 </html>
